--- a/mina.css
+++ b/mina.css
@@ -1,3 +1,145 @@
+body {
+    margin: 0 !important
+}
+
+ul {
+    display: flex;
+    flex-direction: row;
+    padding-left: 0;
+    justify-content: space-around;
+}
+
+ul>li {
+    list-style: none;
+}
+
+ul>li>a {
+    text-decoration: none;
+    color: black;
+}
+
+.container {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.web-lista {
+    display: flex;
+}
+
+.telefon-lista {
+    display: none;
+}
+
+.hamburgare-icon {
+    cursor: pointer;
+    width: 30px;
+    height: 22px;
+    display: flex;
+
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.hamburgare-icon span {
+    display: block;
+    height: 4px;
+    background: white;
+    border-radius: 2px;
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        width: 100%;
+    }
+
+    .web-lista {
+        display: none;
+    }
+
+    .telefon-lista {
+        display: block;
+        position: absolute;
+        right: 0;
+        margin: 5px;
+    }
+
+    .plantering {
+        flex-direction: column;
+    }
+
+    .plantering>h2 {
+        text-align: center;
+    }
+
+    .form-group {
+        flex-direction: column;
+        padding: 1rem;
+    }
+
+    .col-50 {
+        width: 100% !important;
+    }
+
+    .form-control {
+        margin: 0 !important;
+    }
+
+    .plantering>button {
+        margin-top: 0 !important;
+    }
+}
+
+.header-image {
+    background: url('assets/images/handsidan.avif');
+    background-position: center;
+    object-fit: cover;
+    background-size: cover;
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+}
+
+.header-image>img {
+    margin-top: 1rem;
+}
+
+.plantering {
+    display: flex;
+    flex-direction: column;
+}
+
+.plantering>button {
+    align-self: center;
+    margin-top: 1rem;
+}
+
+.form-group {
+    display: flex;
+}
+
+.col-50 {
+    width: 50%
+}
+
+.form-control-planta {
+    margin-right: 0.5rem;
+}
+
+.form-control-datum {
+    margin-left: 0.5rem;
+}
+
+.form-control>label {
+    display: block;
+}
+
+.form-control>input {
+    width: 100%;
+}
 .page-header {
   text-align: center;
   padding: 3rem 0;
