--- a/mina.css
+++ b/mina.css
@@ -78,6 +78,9 @@ ul>li>a {
   padding: 4rem;
 
 }
+.form-rubrik{
+      margin-bottom: 30px;
+}
 
 .plantering>button {
   align-self: center;
@@ -118,8 +121,8 @@ ul>li>a {
   margin-top: 3rem;
   color: white;
   background-color: #4a7c59;
-  font-size: 1.7rem;
-  padding: 1rem 3rem;
+  font-size: 1.3rem;
+  padding: 0.7rem 2.4rem;
   border: none;
   border-radius: 8px;
 }
